完成点击图片获取验证码

--- a/src/statics/views/login.html
+++ b/src/statics/views/login.html
@@ -62,4 +62,8 @@
         window.location.href = '/account/register'
     }
 
+    $('#vcodeimgId').click(function(){
+        $(this).attr("src",`/account/vcode?randomId=${Math.random()}`)
+    })
+
 </script>
