--- a/src/statics/views/login.html
+++ b/src/statics/views/login.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/blueimp-md5/2.10.0/js/md5.min.js"></script>
     <title>登录页面</title>
 </head>
 <body>
@@ -58,12 +59,35 @@
 </html>
 
 <script>
+    //注册
     function register(){
         window.location.href = '/account/register'
     }
 
+    //点击图片 , 获取验证码
     $('#vcodeimgId').click(function(){
         $(this).attr("src",`/account/vcode?randomId=${Math.random()}`)
     })
 
+    //登录
+    function login(){
+        var username = $('#usernameId').val();
+        var password = md5($('#passwordId').val()+"!@#ZZZ-_-");
+        var vcode = $('#vcodeId').val();
+
+        $.post({
+            url:'/account/login',
+            data:{
+                username,
+                password,
+                vcode
+            },
+            success:function(res){
+                if(res.status !=0 ){
+                    alert(res.message)
+                    $('#vcodeimgId').attr("src",`/account/vcode?randomId=${Math.random()}`)
+                }
+            }
+        })
+    }
 </script>
