--- a/src/statics/views/login.html
+++ b/src/statics/views/login.html
@@ -87,7 +87,7 @@
                     alert(res.message)
                     $('#vcodeimgId').attr("src",`/account/vcode?randomId=${Math.random()}`)
                 }else {
-                    window.location,href = "/studentmanager/list"
+                    window.location.href = "/studentmanager/list"
                 } 
             }
         })
