项目初步完成

--- a/src/statics/views/list.html
+++ b/src/statics/views/list.html
@@ -39,9 +39,9 @@
                         <td>{{this.sex}}</td>
                         <td>{{this.phone}}</td>
                         <td>
-                            <a href="#" class="btn btn-success">编辑</a> |
+                            <a href="/studentmanager/edit/{{this._id}}" class="btn btn-success">编辑</a> |
 
-                            <input type="button" class="btn btn-danger" value="删除">
+                            <input type="button" class="btn btn-danger" onclick="deleteStudent('{{this._id}}')" value="删除">
                         </td>
                     </tr>
                 {{/each}}
@@ -57,4 +57,10 @@ function search(){
     window.location.href = `/studentmanager/list?keyword=${$('#studentNameId').val()}`
 }
 
+
+function deleteStudent(_id){
+    if(confirm('确定要删除吗?')){
+        window.location.href = `/studentmanager/delete/${_id}`
+    }
+}
 </script>
