--- a/src/statics/views/parent.html
+++ b/src/statics/views/parent.html
@@ -30,7 +30,7 @@
                             <a class="navbar-brand" href="#">欢迎进入后台管理</a>
                         </div>
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-5">
-                            <p class="navbar-text navbar-right">欢迎【admin】登录&nbsp;
+                            <p class="navbar-text navbar-right">欢迎【{{loginName}}】登录&nbsp;
                                 <a href="javascript:logout()" style="color:red;font-size: 18px;" class="navbar-link">退出</a>
                             </p>
                         </div>
@@ -59,3 +59,9 @@
 </body>
 
 </html>
+
+<script>
+    function logout(){
+        window.location.href = "/account/logout"
+    }
+</script>
